karnc/tests/fixtures/positive/148_cron_multiple/src/jobs.karn
context jobs

service sweeper {
  on cron("*/5 * * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }

  on cron("0 0 * * *") () -> Effect[Result[(), String]] {
    Ok(())
  }
}
