karnc/tests/fixtures/negative/99_http_reserved_prefix/src/svc.karn
context svc

service api from http {
  on GET("/_karn/foo") () -> Effect[HttpResult[String]] {
    Ok("nope")
  }
}
